manifests/vikunja/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
  name: vikunja-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/instance: vikunja
      app.kubernetes.io/name: vikunja
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/instance: vikunja
        app.kubernetes.io/name: vikunja
    spec:
      containers:
        - env:
          - name: VIKUNJA_DATABASE_USER
            value: "postgres" # Todo: move to secret
          - name: VIKUNJA_DATABASE_PASSWORD
            valueFrom:
              secretKeyRef:
                name: postgresql-credentials
                key: password
          - name: VIKUNJA_DATABASE_HOST
            value: "postgresql-ha-postgresql" # Todo: Check if this is correct
          - name: VIKUNJA_SERVICE_JWTSECRET
            valueFrom:
              secretKeyRef:
                name: postgresql-credentials
                key: repmgr-password # Todo: Change it to JWTSecret
          - name: VIKUNJA_SERVICE_FRONTENDURL
            value: http://vikunja-frontend:8080
          image: 'vikunja/api:latest'
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: '1'
              memory: 512Mi
            requests:
              cpu: '0.5'
              memory: 256Mi
          name: api
          ports:
            - containerPort: 3456
              name: http
              protocol: TCP
          # startupProbe:
          #   type: http
          #   httpGet:
          #     path: /health
          #     port: 3456
          # readinessProbe:
          #   type: http
          #   httpGet:
          #     path: /health
          #     port: 3456
          # livenessProbe:
          #   type: http
          #   httpGet:
          #     path: /health
          #     port: 3456
          securityContext:
            capabilities:
              add:
                - CAP_CHOWN
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /etc/vikunja/config.yaml
              name: api-config
              subPath: api-config.yaml
      serviceAccountName: vikunja
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/component: api
              app.kubernetes.io/instance: vikunja
              app.kubernetes.io/name: vikunja
              # todo: add to frontend and api to same node
      volumes:
        - emptyDir: {}
          name: tmp
        - name: api-config
          secret:
            secretName: vikunja
