manifests/vikunja/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
  name: vikunja-frontend
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/component: frontend
  type: ClusterIP
  
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
  name: vikunja-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/component: api
  type: ClusterIP
