manifests/vikunja/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ingress
  annotations:
    kubernetes.io/ingressClassName : nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-gzip: "true"
    nginx.ingress.kubernetes.io/gzip-types: "text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml"
    nginx.ingress.kubernetes.io/gzip-max-length: "256"
    nginx.ingress.kubernetes.io/gzip: "on"
    nginx.ingress.kubernetes.io/gzip_disable: "msie6"
    nginx.ingress.kubernetes.io/gzip_vary: "on"
    nginx.ingress.kubernetes.io/gzip_proxied: "any"
    nginx.ingress.kubernetes.io/gzip_comp_level: "6"
    nginx.ingress.kubernetes.io/gzip_buffers: "16 8k"
    nginx.ingress.kubernetes.io/gzip_http_version: "1.1"
    nginx.ingress.kubernetes.io/gzip_min_length: "256"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    
#    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: vikunja-api
            port:
              number: 3456
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vikunja-frontend
            port:
              number: 8080
